--- a/Src/PoissonSoft.PostgresUtils/PoissonSoft.PostgresUtils.csproj
+++ b/Src/PoissonSoft.PostgresUtils/PoissonSoft.PostgresUtils.csproj
@@ -7,8 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Npgsql" Version="4.1.3.1" />
-		<PackageReference Include="ServiceStack.OrmLite.PostgreSQL" Version="5.8.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Npgsql" Version="5.0.5" />
+		<PackageReference Include="ServiceStack.OrmLite.PostgreSQL" Version="5.11.0" />
 	</ItemGroup>
 
 	<ItemGroup>
