--- a/Src/PoissonSoft.CommonUtils/PoissonSoft.CommonUtils.csproj
+++ b/Src/PoissonSoft.CommonUtils/PoissonSoft.CommonUtils.csproj
@@ -7,4 +7,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
